--- a/style.css
+++ b/style.css
@@ -44,3 +44,16 @@ button.active {
   font-weight: bold;
   font-size: 1.1em;
 }
+
+#tableContainer {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+#tableSVG {
+  width: 300px;
+  height: 300px;
+  background-color: #2a2a2a;
+  border-radius: 50%;
+}
