--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   text-align: center;
   padding: 20px;
   user-select: none;
+  min-height: 100vh;
 }
 
 h1 {
@@ -54,13 +55,6 @@ h1 {
     0 0 30px #00c0ff;
 }
 
-#UTG { top: 0%; left: 42%; }
-#HJ { top: 20%; left: 5%; }
-#CO { top: 60%; left: 5%; }
-#BTN { top: 85%; left: 42%; }
-#SB { top: 60%; left: 85%; }
-#BB { top: 20%; left: 85%; }
-
 #questionBox {
   max-width: 500px;
   margin: 0 auto;
@@ -77,6 +71,7 @@ h1 {
   font-size: 1.3rem;
   margin-bottom: 25px;
   text-shadow: 0 0 8px #00fff7;
+  min-height: 50px;
 }
 
 #actionButtons button {
@@ -110,6 +105,7 @@ h1 {
   margin-top: 15px;
   font-weight: 700;
   text-shadow: 0 0 15px #ff00ff;
+  min-height: 30px;
 }
 
 button[onclick="nextQuestion()"] {
